# lang-vro

./: .glottologid.txt  AUTHORS  CITATION.cff  Links.jspwiki  Links.md  Makefile.in  README  README.markdown  README.md  _config.yml  acronyms-stems-fst-src.md  adjectives-affixes-fst-src.md  adjectives_newwords-stems-fst-src.md  adjectives_newwords-stems.md  adpositions_newwords-stems-fst-src.md  adverbs-affixes-fst-src.md  adverbs_newwords-stems-fst-src.md  arabic_roman_digits-stems-fst-src.md  autogen.sh  clitics-fst-src.md  configure.ac  dependency-cg3-src.md  determiners_newwords-stems-fst-src.md  determiners_newwords-stems.md  disambiguator-cg3-src.md  e  eti  exceptions-stems-fst-src.md  functions-cg3-src.md  giella-vro.pc.in  index-header.md  index.md  interjections_newwords-stems.md  language-map.md  lemmacount.json  manifest.toml  manifest.toml.in  metadata.json  nouns-affixes-fst-src.md  nouns-affixes.md  (+86 more)
src/: Makefile  Makefile.am  N_vro-est.xml  V_vro-est.xml  adj-vro-lex.txt  adv-vro-lex.txt  case.regex  misc_vro-est.xml  noun-vro-lex.txt  noun-vro-morph.txt  num-vro-lex.txt  num-vro-morph.txt  pron-vro-morph.txt  verb-vro-lex.txt  verb-vro-morph.txt  vro-lex.txt  vro-num.txt  xfst-vro.txt
src/cg3/: dependency.cg3  disambiguator.cg3  functions.cg3  generated-tag-list.cg3
src/filters/: Makefile.am  downcase_UCletters.regex  remove-modifier-letter-grave-accent.regex  remove-usage-tags.regex  usage-tags.txt
src/fst/: Makefile.am  clitics.lexc  compounding.lexc  missing6freq.txt  phonology.twolc  root.lexc  tags.yaml  wordfreq.txt
src/fst/affixes/: adjectives.lexc  adverbs.lexc  nouns.lexc  numerals.lexc  postpositions.lexc  pronouns.lexc  propernouns.lexc  quantifiers.lexc  verbs.lexc
src/fst/filters/: Makefile.am  remove-combining-caron-below.regex  remove-combining-circumflex-accent-below.regex  usage-tags.txt
src/fst/morphology/: Makefile.am  Makefile.modifications-local.am  phonology.twolc  root.lexc
src/fst/morphology/affixes/: postpositions.lexc  propernouns.lexc  quantifiers.lexc
src/fst/morphology/stems/: abbreviations.lexc  acronyms.lexc  adjectives.xml  adjectives_newwords.lexc  adpositions.xml  adverbs_newwords.lexc  conjunctors.xml  nouns.lexc  nouns.xml  nouns_newwords.lexc  numerals.lexc  verbs.xml  vro-digits.lexc
src/fst/morphology/test/: Makefile.am  generate-adjective-lemmas.sh.in  generate-noun-lemmas.sh.in  generate-propernoun-lemmas.sh.in  generate-verb-lemmas.sh.in
src/fst/orthography/: Makefile.am  spellrelax.regex
src/fst/stems/: #nouns_newwords.lexc#  .#nouns_newwords.lexc  abbreviations.lexc  adjectives.lexc  adjectives_newwords.lexc  adpositions.lexc  adpositions.xml  adverbs.lexc  adverbs.xml  adverbs_newwords.lexc  arabic_roman_digits.lexc  exceptions.lexc  genitive_attributes.lexc  interjections.lexc  nouns.lexc  nouns.xml  nouns_newwords.lexc  numerals.lexc  numerals.xml  pronouns.lexc  pronouns.xml  propernouns_newwords.lexc  verbs.lexc  verbs.xml  verbs_newwords.lexc  vro-digits.lexc
src/fst/test/gt-desc-yamls/: A-aladu03_gt-desc.yaml  A-alomanw19_gt-desc.yaml  N-ainwq11_gt-desc.yaml  N-asi47_gt-desc.yaml  N-haebue39_gt-desc.yaml  N-hepemn26_gt-desc.yaml  N-hopwnj12_gt-desc.yaml  N-jalg46_gt-desc.yaml  N-kana45_gt-desc.yaml  N-katwq11_gt-desc.yaml  N-kipwnj09_gt-desc.yaml  N-kogwr36_gt-desc.yaml  N-kuld38_gt-desc.yaml  N-kuulj38_gt-desc.yaml  N-pereh14_gt-desc.yaml  N-pini37_gt-desc.yaml  N-pundar28_gt-desc.yaml  N-ristjkas14_gt-desc.yaml  N-susi24_gt-desc.yaml  N-tueue30_gt-desc.yaml  N-vari42_gt-desc.yaml  N-vwrokwnw22_gt-desc.yaml  V-ehitelemae52_gt-desc.yaml  V-elaemae48_gt-desc.yaml  V-hirnahtama58_gt-desc.yaml  V-jahtjma86_gt-desc.yaml  V-juuma77_gt-desc.yaml  V-kakma85_gt-desc.yaml  V-laskma84_gt-desc.yaml  V-naelguemae68_gt-desc.yaml  V-puegaemae76_gt-desc.yaml  V-puhksama64_gt-desc.yaml  V-suenduemae69_gt-desc.yaml  V-switma83_gt-desc.yaml  V-vwima_gt-desc.yaml
src/fst/test/gt-norm-yamls/: A-04ainus_gt-norm.yaml  A-08kuldnw_gt-norm.yaml  A-09likw_gt-norm.yaml  A-13taehine_gt-norm.yaml  N-01hansja_gt-norm.yaml  N-05oppaja_gt-norm.yaml  N-07fueuesiga_gt-norm.yaml  N-08haeielm_gt-norm.yaml  N-09ellaei_gt-norm.yaml  N-09kipwnj_gt-norm.yaml  N-10esaek_gt-norm.yaml  N-10hwrak_gt-norm.yaml  N-12hopwnj_gt-norm.yaml  N-12repaenj_gt-norm.yaml  (+47 more)
src/fst/transcriptions/: transcriptor-date-digit2text.lexc  transcriptor-symbols2text.lexc
src/morphology/: Makefile.am  clitics.lexc  compounding.lexc  missingfreq.txt  root.lexc  tags.yaml  wordfreq.txt
src/morphology/affixes/: adjectives.lexc  adverbs.lexc  nouns.lexc  numerals.lexc  postpositions.lexc  pronouns.lexc  propernouns.lexc  quantifiers.lexc  verbs.lexc
src/morphology/stems/: abbreviations.lexc  acro.lexc  adjectives.lexc  adjectives.xml  adpositions.lexc  adpositions.xml  adpositions_newwords.lexc  adverbs.lexc  adverbs.xml  adverbs_newwords.lexc  conjunctions.lexc  conjunctions.xml  conjunctors.lexc  conjunctors.xml  determiners_newwords.lexc  exceptions.lexc  genitive_attributes.lexc  interjections.lexc  interjections.xml  interjections_newwords.lexc  nouns.lexc  nouns.xml  nouns_newwords.lexc  numerals.lexc  numerals.xml  pronouns.lexc  pronouns.xml  propernouns_newwords.lexc  punctuation.lexc  quantifiers.lexc  quantifiers.xml  verbs.lexc  verbs.xml  verbs_newwords.lexc
src/orthography/: Makefile.am  inituppercase.regex  spellrelax-nfc2nfd.regex  spellrelax-nfc2nfd.regex.sigma.nfd  spellrelax.regex  spellrestrict-nfd2nfc.regex.sigma.nfc  spellrestrict-nfd2nfc.regex.sigma.nfd  split-composed-chars.regex
src/phonology/: vro-phon.twolc
src/syntax/: disambiguation.cg3  disambiguator.cg3
src/transcriptions/: clock.lexc  date.lexc  numbers.lexc  transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc
src/working_files/: N_vro-lex.xml
tools/spellcheckers/: Makefile.am  Makefile.mod-mobile-hfst.am  Makefile.mod-spellcheckers.am  editdist.default.txt  index.xml
tools/spellcheckers/filters/: join-composed-chars.regex
tools/spellcheckers/test/: Makefile.am
(+603 files in other folders)
